completed pending to review